--- a/pom.xml
+++ b/pom.xml
@@ -20,18 +20,11 @@
             <artifactId>selenium-java</artifactId>
             <version>4.22.0</version>
         </dependency>
-
-        <!-- <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>7.0.0</version>
-            <scope>test</scope>
-        </dependency> -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId> testng </artifactId>
             <version>6.14.3</version>
-            <scope>compile</scope>  //replace test to compile 
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
